Incorrect Texture shading in Texture paint mode #46284

Closed
opened 2015-09-27 08:05:17 +02:00 by Robert M · 9 comments

System Information
Debian AMD64, fglrx-driver

Blender Version
Broken: 2.72 and later
Worked: 2.71

Short description of error
Texture shading in Texture paint mode is influenced by lights in the scene, which should not be and is inconsistent with Thexture shading in object mode.

Exact steps for others to reproduce the error
Just open the .blend file in 2.71 and in some later version, and you should see the difference.
texture_paint_mode_bug.blend

Thank you!

**System Information** Debian AMD64, fglrx-driver **Blender Version** Broken: 2.72 and later Worked: 2.71 **Short description of error** Texture shading in Texture paint mode is influenced by lights in the scene, which should not be and is inconsistent with Thexture shading in object mode. **Exact steps for others to reproduce the error** Just open the .blend file in 2.71 and in some later version, and you should see the difference. [texture_paint_mode_bug.blend](https://archive.blender.org/developer/F239831/texture_paint_mode_bug.blend) Thank you!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @robertm

Added subscriber: @robertm
Bastien Montagne changed title from Regression: Incorrect Texture shading in Texture paint mode to Incorrect Texture shading in Texture paint mode 2015-09-27 11:03:08 +02:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-09-27 11:03:08 +02:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Added subscriber: @mont29

Added subscriber: @mont29

Not quite sure whether this was intentional change or not, Antony should know. :)

Not quite sure whether this was intentional change or not, Antony should know. :)

It's unintentional and caused because Cycles handles textured mode differently than blender internal. In blender internal, textured mode uses lighting normally.

It's unintentional and caused because Cycles handles textured mode differently than blender internal. In blender internal, textured mode uses lighting normally.

This issue was referenced by 904db487a7

This issue was referenced by 904db487a7b14c31282fe0284612159a836657cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by e3d882b335

This issue was referenced by e3d882b335cbc9aa4e64bf864e4fe08235117856
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46284
No description provided.