Follow up to previous commit, proper fix for T46284, incorrect Texture shading in Texture paint mode and cycles